--- a/css/main.css
+++ b/css/main.css
@@ -103,16 +103,16 @@ input[type="radio"]::after{
     width: calc(var(--width) * 0.94);
 }
 
-.subview button, .subview select {
-    border: none;
-    border-radius: 2px;
-    box-shadow: 0 1px 2px black;
+.subview button, .subview select, .subview input {
+    border: 2px solid var(--col3);
+    border-radius: 5px;
     margin: 0 auto;
     margin-top:2vh;
     display: grid;
     font-size: 1.1rem;
     padding: 1vw 1vh;
-    background: #eee;
+    background: none;
+    backdrop-filter: blur(5px);
 }
 
 .quiz > .subview {
@@ -123,4 +123,19 @@ input[type="radio"]::after{
 #mnml #logo {
     width:65vmin;
     margin:0 calc(var(--width)/8);
+}
+
+#sleepInfluenceWrap {
+    display: grid;
+    margin: 0 auto;
+    padding: 2vh 2vw;
+}
+
+#wordList {
+    margin:0 auto;
+    font-size: 3vh;
+}
+
+.subview input[type=text]{
+    font-size: 3vh;
 }
