--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ input[type="radio"]::after{
 
 #mnml .subview-wrap > .subview {
     place-items: start;
-    place-content: center;
+    place-content: start;
     width: calc(var(--width) * 0.98)
 }
 
