--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ h1, h2, h3 {
     font-family: var(--titleFont), serif;
 }
 
-button, input {
+button, input, select {
     font-family: inherit;
     color:inherit;
 }
@@ -92,6 +92,10 @@ input[type="radio"]::after{
     width: calc(var(--width) * 0.98)
 }
 
+#mnml .subview-wrap > .subview.center {
+    place-content: center;
+}
+
 #mnml .subview-wrap.quiz > .subview {
     display: none;
   }
@@ -104,7 +108,6 @@ input[type="radio"]::after{
     overflow-y: hidden;
 }
 #mnml .subview-wrap > .subview {
-
     overflow-y: auto;
 }
 
@@ -113,16 +116,11 @@ input[type="radio"]::after{
     display: grid;
     grid-template: 2/2;
     width: calc(var(--width) * 0.9);
-    height: calc(var(--width) * 0.9);
+    /* height: calc(var(--width) * 0.9); */
     gap: 1vw;
     grid-template: ". ." ". .";
 }
 
-.options > div {
-    background: #ccc;
-    display: grid;
-    place-content: center;
-}
 .options > button.correct.selected {
     background: green;
 }
